# bartlebot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  sentences.txt
.github/workflows/: main.yml
bartlebot/: build_db.py  post.py
db/: bartleby.db
text/: bartleby.txt
