[tool.poetry]
name = "bartlebot"
version = "0.1.0"
description = ""
authors = ["Adam Vinueza <adamvinueza@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
