[tool.poetry]
name = "bartlebot"
version = "0.1.0"
description = "Bot that posts random lines from 'Bartleby, the Scrivener'"
authors = ["Adam Vinueza <adamvinueza@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
